@@ -8,6 +8,7 @@ Revision history for Perl extension Finance-Robinhood
         markets as Finance::Robinhood::Market objects
     - New ::Robinhood::Market->new(...) constructor to get an object representing a
         specific exchange. Use the ISO 10383 MIC. ...see the docs for more.
+    - New ::Order->refresh() method
 
 0.09 2016-08-12T01:24:57Z
 
